@@ -1,3 +1,9 @@
+Thu Apr 10 19:06:20 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tests/DCPS/Reliability/pub/Publisher.cpp:
+
+		  Cleaned up code.
+
 Thu Apr 10 18:16:25 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * tests/DCPS/Priority/publisher_main.cpp:
